# husk-gpt

./: .gitignore  Cargo.toml  INTEROP_RESEARCH.md  TUPLE_REPRESENTATION_ANALYSIS.md  test_sample.hk
.github/workflows/: ci.yml
crates/corelib/: Cargo.toml
crates/corelib/src/: lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/emit_dts/: Cargo.toml
crates/emit_dts/src/: lib.rs
crates/emit_js/: Cargo.toml
crates/emit_js/src/: lib.rs
crates/huskc/: Cargo.toml
crates/huskc/src/: main.rs
crates/interop/src/: lib.rs  path_rewriting.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/ts_host/: Cargo.toml
crates/types/src/: lib.rs
examples/: calculator.hk  comprehensive_match_test.hk  cross_module_a.hk  cross_module_b.hk  error_test.hk  exhaustive_test.hk  exhaustiveness_test.hk  hello.hk  import_test.hk  imports_exports_golden.hk  imports_test.hk  match_patterns_golden.hk  match_test.hk  math.hk  minimal_match_test.hk  mixed_match_test.hk  path_rewriting_test.hk  record_enum.hk  reexport_test.hk  simple_calc.hk  simple_reexport_test.hk  standalone.hk  struct.hk  struct_parsing_golden.hk  struct_simple_golden.hk  struct_test.hk  working_match_test.hk
poc/bench/: Cargo.toml
poc/bench/src/: main.rs
poc/poc-a/: Cargo.toml  package.json  ts_host.js
poc/poc-a/src/: main.rs
poc/poc-b/: Cargo.toml
poc/poc-b/src/: main.rs
poc/poc-c/: Cargo.toml
poc/poc-c/src/: main.rs
src/: main.hk  simple.hk
